--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -9859,6 +9859,8 @@ news=الأخبار و المستجدات
 news-selections=إختيار الأخبار و المستجدّات
 next=التالي
 next-change=التغيير التالي
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=تاريخ التشغيل التالي
 next-iteration-date=تاريخ التكرار التالي
 next-message=الرسالة التالية
