--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -9859,6 +9859,8 @@ news=Новини
 news-selections=Избрани от новините
 next=Следващ
 next-change=Следваща промяна (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Следваща дата на изпълнение (Automatic Translation)
 next-iteration-date=Следваща дата на итератиране (Automatic Translation)
 next-message=Следващо съобщение
