--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -9861,6 +9861,8 @@ news=Notícies
 news-selections=Seleccions de notícies
 next=Següent
 next-change=Pròxim canvi
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Data de la pròxima execució
 next-iteration-date=Pròxima data d'iteració
 next-message=Missatge següent
