--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -9859,6 +9859,8 @@ news=Novinky
 news-selections=Výběr novinek
 next=Další
 next-change=Další změna
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Datum dalšího spuštění (Automatic Translation)
 next-iteration-date=Další datum iterace (Automatic Translation)
 next-message=Další zpráva
