--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -9859,6 +9859,8 @@ news=Nyheder
 news-selections=Nyheder Selections
 next=Tekst
 next-change=Next Change (Automatic Copy)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Næste kørselsdato (Automatic Translation)
 next-iteration-date=Næste gentagelsesdato (Automatic Translation)
 next-message=Ny Message
