--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -9861,6 +9861,8 @@ news=Nachrichten
 news-selections=Nachrichtenauswahl
 next=Weiter
 next-change=Nächste Änderung
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Nächstes Ausführungsdatum
 next-iteration-date=Datum der nächsten Iteration
 next-message=Nächste Nachricht
