--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -9859,6 +9859,8 @@ news=News (Automatic Copy)
 news-selections=News Selections (Automatic Copy)
 next=Next (Automatic Copy)
 next-change=Next Change (Automatic Copy)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Next Run Date (Automatic Copy)
 next-iteration-date=Next Iteration Date (Automatic Copy)
 next-message=Next Message (Automatic Copy)
