--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -9861,6 +9861,8 @@ news=Noticias
 news-selections=Selecciones de noticias
 next=Siguiente
 next-change=Cambio siguiente
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Fecha de la próxima ejecución
 next-iteration-date=Próxima fecha de repetición
 next-message=Siguiente mensaje
