--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -9859,6 +9859,8 @@ news=Uudised
 news-selections=Uued valikud
 next=Järgmine
 next-change=Järgmine muudatus (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Järgmise käituskuupäev (Automatic Translation)
 next-iteration-date=Järgmine iteratsioonikuupäev (Automatic Translation)
 next-message=Järgmine sõnum
