--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -9859,6 +9859,8 @@ news=اخبار
 news-selections=انتخاب اخبار
 next=بعدی
 next-change=تغییر بعدی
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=تاریخ اجرای بعدی (Automatic Translation)
 next-iteration-date=تاریخ انقضا بعدی
 next-message=پیام بعدی
