--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -9859,6 +9859,8 @@ news=Uutiset
 news-selections=Uutisvalinnat
 next=Seuraava
 next-change=Seuraava muutos
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Seuraava Suorituspäivä
 next-iteration-date=Seuraavan Iteraation Päivämäärä
 next-message=Seuraava viesti
