--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -9859,6 +9859,8 @@ news=Nouvelles
 news-selections=Choix des dépêches
 next=Suivant
 next-change=Prochain changement
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Date de la prochaine exécution
 next-iteration-date=Date de la prochaine itération
 next-message=Prochain Message
