--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -9859,6 +9859,8 @@ news=खबरें
 news-selections=समाचार चयन (Automatic Translation)
 next=अगला
 next-change=अगला Change
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=अगला भाग दिनांक
 next-iteration-date=अगली पुनरावृत्ति तिथि (Automatic Translation)
 next-message=अगला संदेश
