--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -9862,6 +9862,8 @@ news=Hírek
 news-selections=Válogatott hírek
 next=Következő
 next-change=Következő változtatás
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Következő futás dátuma
 next-iteration-date=Következő iteráció dátuma
 next-message=Következő üzenet
