--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -9859,6 +9859,8 @@ news=Berita
 news-selections=Seleksi Berita
 next=Berikutnya
 next-change=Pilih selanjutnya
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Tanggal Jalankan Berikutnya (Automatic Translation)
 next-iteration-date=Tanggal Iterasi Berikutnya (Automatic Translation)
 next-message=Pesan berikutnya
