--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -9860,6 +9860,8 @@ news=Notizie
 news-selections=Selezioni Notizie
 next=Successivo
 next-change=Cambiamento seguente
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Data di esecuzione successiva (Automatic Translation)
 next-iteration-date=Data iterazione successiva (Automatic Translation)
 next-message=Messaggio Successivo
