--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -9859,6 +9859,8 @@ news=חדשות
 news-selections=בחירות בחדשות
 next=הבא
 next-change=השינוי הבא
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=תאריך ההפעלה הבא (Automatic Translation)
 next-iteration-date=תאריך האיטרציה הבאה
 next-message=הודעה הבאה
