--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -9861,6 +9861,8 @@ news=ニュース
 news-selections=ニュースの選択
 next=次へ
 next-change=次の変更
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=次の実行日
 next-iteration-date=次の繰り返し日
 next-message=次のメッセージ
