--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -9859,6 +9859,8 @@ news=뉴스
 news-selections=뉴스 선택
 next=다음적으로
 next-change=다음 변화
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=다음 실행 날짜 (Automatic Translation)
 next-iteration-date=다음 반복 날짜 (Automatic Translation)
 next-message=다음 메시지
