--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -9859,6 +9859,8 @@ news=ຂ່າວ
 news-selections=ການເລືອກຂ່າວ
 next=ຕໍ່ໄປ
 next-change=ການປ່ຽນແປງຄັ້ງຕໍ່ໄປ
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Next Run Date (Automatic Copy)
 next-iteration-date=Next Iteration Date (Automatic Copy)
 next-message=ຂໍ້ຄວາມຕໍ່ໄປ
