--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -9859,6 +9859,8 @@ news=Naujienos (Automatic Translation)
 news-selections=Naujienų pasirinkimai (Automatic Translation)
 next=Kitą (Automatic Translation)
 next-change=Kitas pakeitimas (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Kito vykdymo data (Automatic Translation)
 next-iteration-date=Kita iteracijos data (Automatic Translation)
 next-message=Kitas pranešimas (Automatic Translation)
