--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -9859,6 +9859,8 @@ news=Berita (Automatic Translation)
 news-selections=Pemilihan Berita (Automatic Translation)
 next=Seterusnya (Automatic Translation)
 next-change=Perubahan Seterusnya (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Tarikh Jalan seterusnya (Automatic Translation)
 next-iteration-date=Tarikh Iteration Seterusnya (Automatic Translation)
 next-message=Mesej Seterusnya (Automatic Translation)
