--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -9859,6 +9859,8 @@ news=Nyheter
 news-selections=Nyhetsutvalg
 next=Neste
 next-change=Neste endring
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Dato for neste kjøring (Automatic Translation)
 next-iteration-date=Neste gjentakelsesdato (Automatic Translation)
 next-message=Neste melding
