--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -9862,6 +9862,8 @@ news=Nieuws
 news-selections=Nieuwsselecties
 next=Volgende
 next-change=Volgende wijziging
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Datum volgende uitvoering
 next-iteration-date=Volgende herhalingsdatum
 next-message=Volgende bericht
