--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -9859,6 +9859,8 @@ news=Wiadomości
 news-selections=Wybrane nowinki
 next=Następna
 next-change=Następna zmiana
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Następna data uruchomienia (Automatic Translation)
 next-iteration-date=Następna data iteracji (Automatic Translation)
 next-message=Następna wiadomość
