--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -9859,6 +9859,8 @@ news=Notícias
 news-selections=Seleções de notícias
 next=Próximo
 next-change=Próxima mudança
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Data da próxima execução
 next-iteration-date=Próxima data de interação
 next-message=Próxima mensagem
