--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -9861,6 +9861,8 @@ news=Notícias
 news-selections=Seleções de Notícias
 next=Próximo
 next-change=Próxima Alteração
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Próxima data de execução (Automatic Translation)
 next-iteration-date=Próxima data de iteração (Automatic Translation)
 next-message=Próxima Mensagem
