--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -9859,6 +9859,8 @@ news=Stiri
 news-selections=Selectii de Stiri
 next=Urmatorul/area
 next-change=Urmatoarea Schimbare
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Data următoarei alergării (Automatic Translation)
 next-iteration-date=Data următoarei iterații (Automatic Translation)
 next-message=Urmatorul Mesaj
