--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -9859,6 +9859,8 @@ news=Новости
 news-selections=Подборка новостей
 next=Следующий
 next-change=Следующее изменение
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Следующая дата запуска (Automatic Translation)
 next-iteration-date=Следующая дата итерации (Automatic Translation)
 next-message=Следующее сообщение
