--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -9859,6 +9859,8 @@ news=Správy
 news-selections=Výber správ
 next=Ďalšia
 next-change=Ďalšia zmena
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Dátum ďalšieho začatia (Automatic Translation)
 next-iteration-date=Dátum ďalšej iterácie (Automatic Translation)
 next-message=Ďalšia správa
