--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -9859,6 +9859,8 @@ news=Novice
 news-selections=Izbrane novice
 next=Naslednji
 next-change=Naslednja sprememba (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Naslednji datum zagona (Automatic Translation)
 next-iteration-date=Datum naslednjega iterationa (Automatic Translation)
 next-message=Naslednje sporočilo
