--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -9859,6 +9859,8 @@ news=Вести
 news-selections=Вести Селекције
 next=Следећа
 next-change=Следећа Измена
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Next Run Date (Automatic Copy)
 next-iteration-date=Next Iteration Date (Automatic Copy)
 next-message=Следећа Порука
