--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -9859,6 +9859,8 @@ news=Nyheter
 news-selections=Nyhetsurval
 next=Nästa
 next-change=Nästa förändring
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Nästa körningsdatum
 next-iteration-date=Datum för nästa iteration
 next-message=Nästa meddelade
