--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -9859,6 +9859,8 @@ news=செய்தி
 news-selections=செய்தி தேர்வுகள்
 next=அடுத்த
 next-change=அடுத்த மாற்றம்
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Next Run Date (Automatic Copy)
 next-iteration-date=Next Iteration Date (Automatic Copy)
 next-message=கடைசி செய்தி
