--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -9859,6 +9859,8 @@ news=ข่าว
 news-selections=การเลือกข่าว (Automatic Translation)
 next=ถัด ไป (Automatic Translation)
 next-change=การเปลี่ยนแปลงถัดไป (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=วันที่เรียกใช้ครั้งถัดไป (Automatic Translation)
 next-iteration-date=วันที่ทําหน้าใหม่ (Automatic Translation)
 next-message=ข้อความถัดไป (Automatic Translation)
