--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -9859,6 +9859,8 @@ news=Haberler
 news-selections=Haber Seçimleri
 next=Sonraki
 next-change=Sonraki Değişiklik (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Sonraki Çalışma Tarihi (Automatic Translation)
 next-iteration-date=Sonraki Yineleme Tarihi (Automatic Translation)
 next-message=Sonraki Mesaj
