--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -9859,6 +9859,8 @@ news=Новини
 news-selections=Подбірка новин
 next=Наступний
 next-change=Наступна зміна (Automatic Translation)
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Дата наступного виконання (Automatic Translation)
 next-iteration-date=Наступна дата ітерації (Automatic Translation)
 next-message=Наступне повідомлення
