--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -9859,6 +9859,8 @@ news=Tin tức
 news-selections=Lựa chọn mới
 next=Tiếp theo
 next-change=Thay đổi kế tiếp
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Ngày chạy tiếp theo (Automatic Translation)
 next-iteration-date=Ngày lặp tiếp theo (Automatic Translation)
 next-message=Bản tin kế tiếp
