--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -9861,6 +9861,8 @@ news=新闻
 news-selections=新闻选择
 next=下一页
 next-change=下一个变更
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=下次运行日期
 next-iteration-date=下一个迭代日期
 next-message=下一则消息
