--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -9860,6 +9860,8 @@ news=新聞
 news-selections=新聞選擇
 next=下一個
 next-change=下一個變動
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=下次執行日期
 next-iteration-date=下一個迭代週期
 next-message=下一則訊息
