--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -9859,6 +9859,8 @@ news=Ειδήσεις
 news-selections=Επιλογές ειδήσεων
 next=Επόμενο
 next-change=Επόμενη αλλαγή
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Επόμενη ημερομηνία εκτέλεσης (Automatic Translation)
 next-iteration-date=Επόμενη ημερομηνία επανάληψης (Automatic Translation)
 next-message=Επόμενο μήνυμα
