--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -9859,6 +9859,8 @@ news=Berriak
 news-selections=Berrien aukeraketa
 next=Hurrengoa
 next-change=Hurrengo Aldaketa
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Next Run Date (Automatic Copy)
 next-iteration-date=Next Iteration Date (Automatic Copy)
 next-message=Hurrengo mezua
