--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -9859,6 +9859,8 @@ news=Noticias
 news-selections=Seleccións de noticias
 next=Seguinte
 next-change=Seguinte cambio
+next-event-ends=Next Event Ends (Automatic Copy)
+next-event-starts=Next Event Starts (Automatic Copy)
 next-fire-date=Next Run Date (Automatic Copy)
 next-iteration-date=Next Iteration Date (Automatic Copy)
 next-message=Seguinte mensaxe
