--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=إدارة تقديرات التو
 action.MANAGE_COMMERCE_CURRENCIES=إدارة العملات
 action.MANAGE_COMMERCE_HEALTH_STATUS=إدارة الحالة الصحية
 action.MANAGE_COMMERCE_ORDER_NOTES=إدارة ملاحظات الطلبات
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=إدارة أسعار الطلبات
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=إدارة ملاحظات الطلبات المقيدة
 action.MANAGE_COMMERCE_ORDERS=إدارة الطلبات
