--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gestiona les estimacions de dispon
 action.MANAGE_COMMERCE_CURRENCIES=Gestiona les monedes
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gestiona l'estat de salut
 action.MANAGE_COMMERCE_ORDER_NOTES=Administra notes de comandes
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestiona els preus de les comandes
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administra notes restringides de comandes
 action.MANAGE_COMMERCE_ORDERS=Gestiona les comandes
