--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Správa odhadů dostupnosti (Autom
 action.MANAGE_COMMERCE_CURRENCIES=Správa měn (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Správa stavu (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Správa poznámek k objednávce (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Správa cen objednávek (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Správa poznámek s omezeným pořadím (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Spravovat objednávky
