--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Administrer estimater for tilgæng
 action.MANAGE_COMMERCE_CURRENCIES=Administrer valutaer (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Administrer tilstandsstatus (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Administrere ordrebemærkninger (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Administrer ordrepriser (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administrere begrænsede noter af ordre (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Administrer ordre
