--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Administrar cálculos de disponibi
 action.MANAGE_COMMERCE_CURRENCIES=Administrar monedas
 action.MANAGE_COMMERCE_HEALTH_STATUS=Administrar estado de mantenimiento
 action.MANAGE_COMMERCE_ORDER_NOTES=Administrar notas de pedidos
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Administrar precios de pedidos
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Administrar notas restringidas de pedidos
 action.MANAGE_COMMERCE_ORDERS=Administrar los pedidos
