--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Kättesaadavuse hinnangute haldami
 action.MANAGE_COMMERCE_CURRENCIES=Valuutade haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Seisundi oleku haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Tellimuse märkmete haldamine (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Tellimuse hindade haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Tellimuse piiratud märkmete haldamine (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Tellimuste haldamine
