--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Mengelola Estimasi Ketersediaan (A
 action.MANAGE_COMMERCE_CURRENCIES=Kelola Mata Uang (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Kelola Status Kesehatan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Mengelola Catatan Pesanan (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Kelola Harga Pesanan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Mengelola Pesan Catatan Terbatas (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Mengelola Pesanan
