--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gestione Stime di Disponibilità
 action.MANAGE_COMMERCE_CURRENCIES=Gestione Valute
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gestione Health Status
 action.MANAGE_COMMERCE_ORDER_NOTES=Gestisci Note d'Ordine
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestione Prezzi d'Ordine
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gestione Note d'Ordine Private
 action.MANAGE_COMMERCE_ORDERS=Gestisci Ordini
