--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=נהל הערכות זמינות
 action.MANAGE_COMMERCE_CURRENCIES=נהל מטבעות
 action.MANAGE_COMMERCE_HEALTH_STATUS=נהל מצב תקינות
 action.MANAGE_COMMERCE_ORDER_NOTES=נהל הערות הזמנה
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=ניהול מחירי הזמנות (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=נהל הערות הזמנה מוגבלות
 action.MANAGE_COMMERCE_ORDERS=נהל הזמנות
