--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=가용성 예측 관리 (Automatic
 action.MANAGE_COMMERCE_CURRENCIES=통화 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=상태 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=주문 노트 관리 (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=주문 가격 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=주문 제한 메모 관리 (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=순서를 처리하십시요
