--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Tvarkyti pasiekiamumo įvertinimus
 action.MANAGE_COMMERCE_CURRENCIES=Tvarkyti valiutas (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Tvarkyti sveikatos būklę (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Tvarkyti užsakymo pastabas (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Tvarkyti užsakymų kainas (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Tvarkyti apribotas užsakymo pastabas (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Tvarkyti užsakymus (Automatic Translation)
