--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Beschikbaarheidsramingen beheren
 action.MANAGE_COMMERCE_CURRENCIES=Valuta's beheren
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gezondheidstoestand beheren
 action.MANAGE_COMMERCE_ORDER_NOTES=Ordernota's beheren
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Bestelprijzen beheren
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Beperkte Ordernota's beheren
 action.MANAGE_COMMERCE_ORDERS=Bestellingen beheren
