--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gerenciar Estimativas de Disponibi
 action.MANAGE_COMMERCE_CURRENCIES=Gerenciar Moedas
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gerenciar estado de saúde
 action.MANAGE_COMMERCE_ORDER_NOTES=Gerenciar Notas do Pedido
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gerenciar Preços do Pedido
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gerenciar Notas Restritas do Pedido
 action.MANAGE_COMMERCE_ORDERS=Gerenciar pedidos
