--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gerenciar estimativas de disponibi
 action.MANAGE_COMMERCE_CURRENCIES=Gerenciar moedas (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gerenciar o Estado de Saúde (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Gerenciar notas de pedidos (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gerenciar preços de pedidos (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gerenciar notas restritas de pedidos (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Gerir Pedidos
