--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gestionare estimări disponibilita
 action.MANAGE_COMMERCE_CURRENCIES=Gestionare valute (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gestionare stare de sănătate (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Gestionare note comandă (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gestionare prețuri comandă (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gestionare note restricționate comandă (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Gestionează Comenzi
