--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Управление на прог
 action.MANAGE_COMMERCE_CURRENCIES=Управление на валути (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Управление на състоянието на здравето (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Управление на бележки за поръчки (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Управление на цени на поръчки (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Управление на ограничени бележки за поръчки (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Управление на поръчките
