--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Schätzungen für Verfügbarkeit v
 action.MANAGE_COMMERCE_CURRENCIES=Währungen verwalten
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gesundheitszustand verwalten
 action.MANAGE_COMMERCE_ORDER_NOTES=Anmerkungen zu Bestellungen verwalten
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Bestellpreise verwalten
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Eingeschränkte Anmerkungen zu Bestellungen verwalten
 action.MANAGE_COMMERCE_ORDERS=Aufträge verwalten
