--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=مدیریت برآوردهای م
 action.MANAGE_COMMERCE_CURRENCIES=مدیریت ارزها
 action.MANAGE_COMMERCE_HEALTH_STATUS=مدیریت وضعیت سلامتی
 action.MANAGE_COMMERCE_ORDER_NOTES=مدیریت یادداشت های سفارش
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=مدیریت قیمت سفارش (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=مدیریت یادداشت های محدود شده سفارش
 action.MANAGE_COMMERCE_ORDERS=مدیریت سفارشات
