--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Hallitse Saatavuusarvioita
 action.MANAGE_COMMERCE_CURRENCIES=Hallitse Valuuttoja
 action.MANAGE_COMMERCE_HEALTH_STATUS=Hallitse Terveydentilaa
 action.MANAGE_COMMERCE_ORDER_NOTES=Hallitse Tilausten Huomautuksia
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Hallitse Tilausten Hintoja
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Hallitse Tilausten Rajoitettuja Huomautuksia
 action.MANAGE_COMMERCE_ORDERS=Hallinnoi tilauksia
