--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Gérer les estimations de disponib
 action.MANAGE_COMMERCE_CURRENCIES=Gérer les devises
 action.MANAGE_COMMERCE_HEALTH_STATUS=Gérer l'état de santé
 action.MANAGE_COMMERCE_ORDER_NOTES=Gérer les notes de commande
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Gérer les prix des commandes
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Gérer les notes restreintes de commande
 action.MANAGE_COMMERCE_ORDERS=Gérer les commandes
