--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Manage Availability Estimates (Aut
 action.MANAGE_COMMERCE_CURRENCIES=Manage Currencies (Automatic Copy)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Manage Health Status (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_NOTES=Manage Order Notes (Automatic Copy)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Manage Order Prices (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Manage Order Restricted Notes (Automatic Copy)
 action.MANAGE_COMMERCE_ORDERS=Administrar as ordes de envío
