--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Elérhetőség-becslés kezelése
 action.MANAGE_COMMERCE_CURRENCIES=Pénznemek kezelése
 action.MANAGE_COMMERCE_HEALTH_STATUS=Műszaki állapot kezelése
 action.MANAGE_COMMERCE_ORDER_NOTES=Megrendelések megjegyzéseinek a kezelése
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Megrendelés árainak a kezelése
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Megrendelések korlátozott megjegyzéseinek a kezelése
 action.MANAGE_COMMERCE_ORDERS=Megrendelések kezelése
