--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=在庫数の見積もりを管理
 action.MANAGE_COMMERCE_CURRENCIES=通貨管理
 action.MANAGE_COMMERCE_HEALTH_STATUS=ヘルス状態管理
 action.MANAGE_COMMERCE_ORDER_NOTES=注文メモの管理
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=注文価格の管理
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=注文制限メモの管理
 action.MANAGE_COMMERCE_ORDERS=注文を管理する
