--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Urus anggaran Ketersediaan (Automa
 action.MANAGE_COMMERCE_CURRENCIES=Menguruskan Mata Wang (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Menguruskan Status Kesihatan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Urus Nota Pesanan (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Uruskan Harga Pesanan (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Urus pesanan Nota Terhad (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Urus pesanan (Automatic Translation)
