--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Behandle tilgjengelighetsestimater
 action.MANAGE_COMMERCE_CURRENCIES=Behandle valutaer (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Behandle tilstandsstatus (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Behandle ordremerknader (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Behandle ordrepriser (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Behandle begrensede ordremerknader (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Behandle bestilinger
