--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Správa odhadov dostupnosti (Autom
 action.MANAGE_COMMERCE_CURRENCIES=Správa mien (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Správa stavu stavu (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Správa poznámok k objednávke (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Správa cien objednávky (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Správa poznámok s obmedzeným poradím (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Správa objednávok
