--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Upravljanje ocen razpoložljivosti
 action.MANAGE_COMMERCE_CURRENCIES=Upravljanje valut (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Upravljanje stanja zdravja (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Upravljanje opomb nalogov (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Upravljanje cen naročila (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Upravljanje omejenih opomb za naročilo (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Uredi naročila
