--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Hantera tillgänglighetsberäkning
 action.MANAGE_COMMERCE_CURRENCIES=Hantera valutor
 action.MANAGE_COMMERCE_HEALTH_STATUS=Hantera hälsostatus
 action.MANAGE_COMMERCE_ORDER_NOTES=Hantera beställningsanteckningar
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Hantera orderpriser
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Hantera beställningsbegränsade anteckningar
 action.MANAGE_COMMERCE_ORDERS=Hantera beställningar
