--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=Quản lý ước tính về tính
 action.MANAGE_COMMERCE_CURRENCIES=Quản lý đơn vị tiền tệ (Automatic Translation)
 action.MANAGE_COMMERCE_HEALTH_STATUS=Quản lý tình trạng sức khỏe (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_NOTES=Quản lý Ghi chú Đơn hàng (Automatic Translation)
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=Quản lý giá đơn hàng (Automatic Translation)
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=Quản lý ghi chú bị hạn chế thứ tự (Automatic Translation)
 action.MANAGE_COMMERCE_ORDERS=Quản lý đơn đặt hàng
