--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=管理库存估计
 action.MANAGE_COMMERCE_CURRENCIES=管理币种
 action.MANAGE_COMMERCE_HEALTH_STATUS=管理健康状态
 action.MANAGE_COMMERCE_ORDER_NOTES=管理订单备注
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=管理订单价格
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=管理订单限制备注
 action.MANAGE_COMMERCE_ORDERS=管理订单
