--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -377,6 +377,7 @@ action.MANAGE_COMMERCE_AVAILABILITY_ESTIMATES=管理庫存預計
 action.MANAGE_COMMERCE_CURRENCIES=管理貨幣
 action.MANAGE_COMMERCE_HEALTH_STATUS=管理健康狀態
 action.MANAGE_COMMERCE_ORDER_NOTES=管理訂單備註
+action.MANAGE_COMMERCE_ORDER_PAYMENT_METHODS=Manage Commerce Order Payment Methods (Automatic Copy)
 action.MANAGE_COMMERCE_ORDER_PRICES=管理訂單價格
 action.MANAGE_COMMERCE_ORDER_RESTRICTED_NOTES=管理訂單限制備註
 action.MANAGE_COMMERCE_ORDERS=管理訂單
